# test_app

./: README.md  pyproject.toml  setup.cfg
employees/: settings.py  urls.py
orgchart/: admin.py  apps.py  models.py  views.py
orgchart/management/commands/: generatedata.py
orgchart/migrations/: 0001_initial.py
orgchart/templates/: department_tree.html  tree.html
