[tool.poetry]
name = "aplication"
version = "0.1.0"
description = ""
authors = ["Maksat Hemdemow <thehighestintheroom00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.6"
faker = "^19.12.0"
django-bootstrap4 = "^23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
